Fixed dead links

--- a/_posts/blog/2016-08-21-ddpg-rl.md
+++ b/_posts/blog/2016-08-21-ddpg-rl.md
@@ -39,7 +39,7 @@ Here's a classic example from <a href="#References">Richard Sutton's book<a/>, w
     caption="CartPole-v0 environment: OpenAI Gym"
 %}
 
-Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced a **policy-gradient** **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). In this blog post, we're going to discuss how to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://gym.openai.com) on the pendulum environment. I'll also discuss some of the theory behind it. Regrettably, I can't start with introducing the basics of reinforcement learning since that would make this blog post much too long; however, Richard Sutton's book (linked above), as well as [David Silver's course](http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html), are excellent resources to get going with RL.
+Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced a **policy-gradient** **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). In this blog post, we're going to discuss how to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://github.com/openai/gym) on the pendulum environment. I'll also discuss some of the theory behind it. Regrettably, I can't start with introducing the basics of reinforcement learning since that would make this blog post much too long; however, Richard Sutton's book (linked above), as well as [David Silver's course](http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html), are excellent resources to get going with RL.
 
 ## Lets Start With Some Theory
 
@@ -47,7 +47,7 @@ Google DeepMind has devised a solid algorithm for tackling the continuous action
 
 ### Policy-Gradient Methods
 
-Policy-Gradient (PG) algorithms optimize a policy end-to-end by computing noisy estimates of the gradient of the expected reward of the policy and then updating the policy in the gradient direction. Traditionally, PG methods have assumed a stochastic policy $\mu (a \| s)$, which gives a probability distribution over actions. Ideally, the algorithm sees lots of training examples of high rewards from good actions and negative rewards from bad actions. Then, it can increase the probability of the good actions. In practice, you tend to run into plenty of problems with vanilla-PG; for example, getting one reward signal at the end of a long episode of interaction with the environment makes it difficult to ascertain exactly which action was the good one. This is known as the *credit assignment problem*. For RL problems with continuous action spaces, vanilla-PG is all but useless. You can, however, get vanilla-PG to work with some RL domains that take in visual inputs and have discrete action spaces with a convolutional neural network representing your policy (talk about standing on the shoulders of giants!). There are extensions to the vanilla-PG algorithm such as [REINFORCE](https://webdocs.cs.ualberta.ca/~sutton/williams-92.pdf) and [Natural Policy Gradients](http://papers.nips.cc/paper/2073-a-natural-policy-gradient.pdf) that make the algorithm much more viable. For a first look into stochastic policy gradients, you can find an overview of the Stochastic Policy Gradient theorem in <a href="#References">[3]</a>, an in-depth blog post by Andrej Karpathy on [here](http://karpathy.github.io/2016/05/31/rl/), and a nice explanation from OpenAI [here](https://gym.openai.com/docs/rl#Policy-Gradients).
+Policy-Gradient (PG) algorithms optimize a policy end-to-end by computing noisy estimates of the gradient of the expected reward of the policy and then updating the policy in the gradient direction. Traditionally, PG methods have assumed a stochastic policy $\mu (a \| s)$, which gives a probability distribution over actions. Ideally, the algorithm sees lots of training examples of high rewards from good actions and negative rewards from bad actions. Then, it can increase the probability of the good actions. In practice, you tend to run into plenty of problems with vanilla-PG; for example, getting one reward signal at the end of a long episode of interaction with the environment makes it difficult to ascertain exactly which action was the good one. This is known as the *credit assignment problem*. For RL problems with continuous action spaces, vanilla-PG is all but useless. You can, however, get vanilla-PG to work with some RL domains that take in visual inputs and have discrete action spaces with a convolutional neural network representing your policy (talk about standing on the shoulders of giants!). There are extensions to the vanilla-PG algorithm such as [REINFORCE](https://link.springer.com/content/pdf/10.1007/BF00992696.pdf) and [Natural Policy Gradients](http://papers.nips.cc/paper/2073-a-natural-policy-gradient.pdf) that make the algorithm much more viable. For a first look into stochastic policy gradients, you can find an overview of the Stochastic Policy Gradient theorem in <a href="#References">[3]</a>, an in-depth blog post by Andrej Karpathy on [here](http://karpathy.github.io/2016/05/31/rl/).
 
 ### Actor-Critic Algorithms
 
@@ -225,15 +225,21 @@ class ActorNetwork(object):
 
     ...
 
-    def create_actor_network(self): 
+    def create_actor_network(self):
         inputs = tflearn.input_data(shape=[None, self.s_dim])
-        net = tflearn.fully_connected(inputs, 400, activation='relu')
-        net = tflearn.fully_connected(net, 300, activation='relu')
+        net = tflearn.fully_connected(inputs, 400)
+        net = tflearn.layers.normalization.batch_normalization(net)
+        net = tflearn.activations.relu(net)
+        net = tflearn.fully_connected(net, 300)
+        net = tflearn.layers.normalization.batch_normalization(net)
+        net = tflearn.activations.relu(net)
         # Final layer weights are init to Uniform[-3e-3, 3e-3]
         w_init = tflearn.initializations.uniform(minval=-0.003, maxval=0.003)
-        out = tflearn.fully_connected(net, self.a_dim, activation='tanh', weights_init=w_init)
-        scaled_out = tf.mul(out, self.action_bound) # Scale output to -action_bound to action_bound
-        return inputs, out, scaled_out 
+        out = tflearn.fully_connected(
+            net, self.a_dim, activation='tanh', weights_init=w_init)
+        # Scale output to -action_bound to action_bound
+        scaled_out = tf.multiply(out, self.action_bound)
+        return inputs, out, scaled_out
 
 
 class CriticNetwork(object):
@@ -243,13 +249,19 @@ class CriticNetwork(object):
     def create_critic_network(self):
         inputs = tflearn.input_data(shape=[None, self.s_dim])
         action = tflearn.input_data(shape=[None, self.a_dim])
-        net = tflearn.fully_connected(inputs, 400, activation='relu')
+        net = tflearn.fully_connected(inputs, 400)
+        net = tflearn.layers.normalization.batch_normalization(net)
+        net = tflearn.activations.relu(net)
+
         # Add the action tensor in the 2nd hidden layer
         # Use two temp layers to get the corresponding weights and biases
         t1 = tflearn.fully_connected(net, 300)
         t2 = tflearn.fully_connected(action, 300)
-        net = tflearn.activation(tf.matmul(net,t1.W) + tf.matmul(action, t2.W) + t2.b, activation='relu')
-        # linear layer connected to 1 output representing Q(s,a) 
+
+        net = tflearn.activation(
+            tf.matmul(net, t1.W) + tf.matmul(action, t2.W) + t2.b, activation='relu')
+
+        # linear layer connected to 1 output representing Q(s,a)
         # Weights are init to Uniform[-3e-3, 3e-3]
         w_init = tflearn.initializations.uniform(minval=-0.003, maxval=0.003)
         out = tflearn.fully_connected(net, 1, weights_init=w_init)
@@ -382,6 +394,8 @@ with tf.Session() as sess:
     critic = CriticNetwork(sess, state_dim, action_dim, \
         CRITIC_LEARNING_RATE, TAU, actor.get_num_trainable_vars())
 
+    actor_noise = OrnsteinUhlenbeckActionNoise(mu=np.zeros(action_dim))
+
     # Initialize our Tensorflow variables
     sess.run(tf.initialize_all_variables())
    
@@ -392,11 +406,11 @@ with tf.Session() as sess:
     # Initialize replay memory
     replay_buffer = ReplayBuffer(BUFFER_SIZE)
 
-    for i in xrange(MAX_EPISODES):
+    for i in range(MAX_EPISODES):
 
         s = env.reset()
 
-        for j in xrange(MAX_EP_STEPS):
+        for j in range(MAX_EP_STEPS):
 
             if RENDER_ENV: 
                 env.render()
@@ -404,7 +418,7 @@ with tf.Session() as sess:
             # Added exploration noise. In the literature, they use
             # the Ornstein-Uhlenbeck stochastic process for control tasks
             # that deal with momentum
-            a = actor.predict(np.reshape(s, (1, 3))) + (1. / (1. + i))
+            a = actor.predict(np.reshape(s, (1, actor.s_dim))) + actor_noise()
 
             s2, r, terminal, info = env.step(a[0])
 
@@ -421,7 +435,7 @@ with tf.Session() as sess:
                 target_q = critic.predict_target(s2_batch, actor.predict_target(s2_batch))
 
                 y_i = []
-                for k in xrange(MINIBATCH_SIZE):
+                for k in range(MINIBATCH_SIZE):
                     if t_batch[k]:
                         y_i.append(r_batch[k])
                     else:
@@ -447,7 +461,7 @@ with tf.Session() as sess:
 You'll want to add book-keeping to the code and arrange things a little more neatly- you can find the full code [here](https://github.com/pemami4911/deep-rl/tree/master/ddpg).
 
 I used Tensorboard to view the total reward per episode and average max Q.
-Tensorflow is a bit low-level, so it's definitely recommended to use tools like tflearn, keras, Tensorboard, etc., on top of it. I am quite pleased with TF though; it's no surprise that it got so popular so quickly. 
+Tensorflow is a bit low-level, so it's definitely recommended to use wrappers like tflearn, keras, Tensorboard, etc., on top of it. I am quite pleased with TF though; it's no surprise that it got so popular so quickly. 
 
 ## Looking Forward
 
@@ -471,10 +485,10 @@ The authors of DDPG also used convolutional neural networks to tackle control ta
 
 ## References 
 
-1. Sutton, Richard S., and Andrew G. Barto. [Reinforcement learning: An introduction](https://webdocs.cs.ualberta.ca/~sutton/book/ebook/the-book.html).
-2. [Reinforcement learning: An introduction - Fig 6.15](https://webdocs.cs.ualberta.ca/~sutton/book/ebook/node66.html)
+1. Sutton, Richard S., and Andrew G. Barto. [Reinforcement learning: An introduction](http://incompleteideas.net/sutton/book/ebook/the-book.html).
+2. [Reinforcement learning: An introduction - Fig 6.15](http://incompleteideas.net/sutton/book/ebook/node66.html)
 3. Silver, et al. [Deterministic Policy Gradients](http://jmlr.org/proceedings/papers/v32/silver14.pdf)
 4. Mnih, et al. [Human-level control through deep reinforcement learning](http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html)
 5. Lillicrap, et al. [Continuous control with Deep Reinforcement Learning](http://arxiv.org/pdf/1509.02971v2.pdf)
-6. [Reinforcement learning: An introduction - Fig 6.13](https://webdocs.cs.ualberta.ca/~sutton/book/ebook/node65.html)
+6. [Reinforcement learning: An introduction - Fig 6.13](http://incompleteideas.net/sutton/book/ebook/node65.html)
 
