Fix typo in blog post

--- a/_posts/blog/2016-08-21-ddpg-rl.md
+++ b/_posts/blog/2016-08-21-ddpg-rl.md
@@ -106,7 +106,7 @@ $$
 \end{equation}
 $$ 
 
-Notice that the policy term in the expectation is not a distribution over actions. It turns out that all you need is the gradient of the output of the critic network w.r.t. its parameters, multiplied by the gradient of the output of the actor network w.r.t. its parameters, averaged over a minibatch. Simple!
+Notice that the policy term in the expectation is not a distribution over actions. It turns out that all you need is the gradient of the output of the critic network w.r.t. the actions, multiplied by the gradient of the output of the actor network w.r.t. its parameters, averaged over a minibatch. Simple!
 
 I think the proof of the deterministic policy gradient theorem is quite illuminating, so I'd like to demonstrate it here before moving on to the code.
 
@@ -213,7 +213,7 @@ class ReplayBuffer(object):
         return s_batch, a_batch, r_batch, t_batch, s2_batch
 
     def clear(self):
-        self.deque.clear()
+        self.buffer.clear()
         self.count = 0
 {% endhighlight %}
 
