Fixed blog post bylines

--- a/_posts/blog/2016-08-21-ddpg-rl.md
+++ b/_posts/blog/2016-08-21-ddpg-rl.md
@@ -5,6 +5,7 @@ date:   2016-08-21
 category: blog
 redirect_from: 
     - /blog_posts/2016/08/21/ddpg-rl.html
+byline: An introduction to the Deep Deterministic Policy Gradient (DDPG) algorithm
 ---
 
 <script type="text/javascript" async
