Updated links for DDPG blog post

--- a/_posts/blog/2016-08-21-ddpg-rl.md
+++ b/_posts/blog/2016-08-21-ddpg-rl.md
@@ -30,10 +30,10 @@ Here's a classic example from <a href="#References">Richard Sutton's book<a/>, w
 {%
     include image.html
     img="/img/classic_rl.jpg"
-    caption="Cliff-walking task, Fig. 6.13 from [6]"
+    caption="Cliff-walking task, Fig. 6.4 from [1]"
 %}
 
- After Deep Q-Networks <a href="#References">[4]</a> became a hit, people realized that deep learning methods could be used to solve high-dimensional problems. One of the subsequent challenges that the reinforcement learning community faced was figuring out how to deal with continuous action spaces. This is a significant obstacle, **since most interesting problems in robotic control, etc., fall into this category**. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality problem as before. On the other hand, a naive discretization of the action space throws away valuable information concerning the geometry of the action domain. 
+ After Deep Q-Networks <a href="#References">[3]</a> became a hit, people realized that deep learning methods could be used to solve high-dimensional problems. One of the subsequent challenges that the reinforcement learning community faced was figuring out how to deal with continuous action spaces. This is a significant obstacle, **since most interesting problems in robotic control, etc., fall into this category**. Logically, if you discretize your continuous action space too finely, you end up with the same curse of dimensionality problem as before. On the other hand, a naive discretization of the action space throws away valuable information concerning the geometry of the action domain. 
 
 {%
     include image.html
@@ -41,7 +41,7 @@ Here's a classic example from <a href="#References">Richard Sutton's book<a/>, w
     caption="CartPole-v0 environment: OpenAI Gym"
 %}
 
-Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[3]</a> on Deterministic Policy Gradients, they have produced a **policy-gradient** **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[5]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). In this blog post, we're going to discuss how to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://github.com/openai/gym) on the pendulum environment. I'll also discuss some of the theory behind it. Regrettably, I can't start with introducing the basics of reinforcement learning since that would make this blog post much too long; however, Richard Sutton's book (linked above), as well as [David Silver's course](http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html), are excellent resources to get going with RL.
+Google DeepMind has devised a solid algorithm for tackling the continuous action space problem. Building off the prior work of <a href="#References">[2]</a> on Deterministic Policy Gradients, they have produced a **policy-gradient** **actor-critic** algorithm called Deep Deterministic Policy Gradients (DDPG) <a href="#References">[4]</a> that is **off-policy** and **model-free**, and that uses some of the deep learning tricks that were introduced along with Deep Q-Networks (hence the "deep"-ness of DDPG). In this blog post, we're going to discuss how to implement this algorithm using Tensorflow and tflearn, and then evaluate it with [OpenAI Gym](https://github.com/openai/gym) on the pendulum environment. I'll also discuss some of the theory behind it. Regrettably, I can't start with introducing the basics of reinforcement learning since that would make this blog post much too long; however, Richard Sutton's book (linked above), as well as [David Silver's course](http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html), are excellent resources to get going with RL.
 
 ## Lets Start With Some Theory
 
@@ -49,14 +49,14 @@ Google DeepMind has devised a solid algorithm for tackling the continuous action
 
 ### Policy-Gradient Methods
 
-Policy-Gradient (PG) algorithms optimize a policy end-to-end by computing noisy estimates of the gradient of the expected reward of the policy and then updating the policy in the gradient direction. Traditionally, PG methods have assumed a stochastic policy $\mu (a \| s)$, which gives a probability distribution over actions. Ideally, the algorithm sees lots of training examples of high rewards from good actions and negative rewards from bad actions. Then, it can increase the probability of the good actions. In practice, you tend to run into plenty of problems with vanilla-PG; for example, getting one reward signal at the end of a long episode of interaction with the environment makes it difficult to ascertain exactly which action was the good one. This is known as the *credit assignment problem*. For RL problems with continuous action spaces, vanilla-PG is all but useless. You can, however, get vanilla-PG to work with some RL domains that take in visual inputs and have discrete action spaces with a convolutional neural network representing your policy (talk about standing on the shoulders of giants!). There are extensions to the vanilla-PG algorithm such as [REINFORCE](https://link.springer.com/content/pdf/10.1007/BF00992696.pdf) and [Natural Policy Gradients](http://papers.nips.cc/paper/2073-a-natural-policy-gradient.pdf) that make the algorithm much more viable. For a first look into stochastic policy gradients, you can find an overview of the Stochastic Policy Gradient theorem in <a href="#References">[3]</a>, an in-depth blog post by Andrej Karpathy on [here](http://karpathy.github.io/2016/05/31/rl/).
+Policy-Gradient (PG) algorithms optimize a policy end-to-end by computing noisy estimates of the gradient of the expected reward of the policy and then updating the policy in the gradient direction. Traditionally, PG methods have assumed a stochastic policy $\mu (a \| s)$, which gives a probability distribution over actions. Ideally, the algorithm sees lots of training examples of high rewards from good actions and negative rewards from bad actions. Then, it can increase the probability of the good actions. In practice, you tend to run into plenty of problems with vanilla-PG; for example, getting one reward signal at the end of a long episode of interaction with the environment makes it difficult to ascertain exactly which action was the good one. This is known as the *credit assignment problem*. For RL problems with continuous action spaces, vanilla-PG is all but useless. You can, however, get vanilla-PG to work with some RL domains that take in visual inputs and have discrete action spaces with a convolutional neural network representing your policy (talk about standing on the shoulders of giants!). There are extensions to the vanilla-PG algorithm such as [REINFORCE](https://link.springer.com/content/pdf/10.1007/BF00992696.pdf) and [Natural Policy Gradients](http://papers.nips.cc/paper/2073-a-natural-policy-gradient.pdf) that make the algorithm much more viable. For a first look into stochastic policy gradients, you can find an overview of the Stochastic Policy Gradient theorem in <a href="#References">[2]</a>, an in-depth blog post by Andrej Karpathy on [here](http://karpathy.github.io/2016/05/31/rl/).
 
 ### Actor-Critic Algorithms
 
 {%
     include image.html
     img="/img/actor-critic.png"
-    caption="The actor-critic architecture, Fig. 6.15 from [2]" 
+    caption="The actor-critic architecture, figure from [1]" 
 %}
 
 The Actor-Critic learning algorithm is used to represent the policy function independently of the value function. The policy function structure is known as the _actor_, and the value function structure is referred to as the _critic_. The actor produces an action given the current state of the environment, and the critic produces a TD (Temporal-Difference) error signal given the state and resultant reward. If the critic is estimating the action-value function $Q(s,a)$, it will also need the output of the actor.  The output of the critic drives learning in both the actor and the critic. In Deep Reinforcement Learning, neural networks can be used to represent the actor and critic structures. 
@@ -97,9 +97,9 @@ $$
 
 Here, a minibatch of size $N$ has been sampled from the replay buffer, with the $i$ index referring to the i'th sample.  The target for the TD error computation, $y_i$, is computed from the sum of the immediate reward and the outputs of the target actor and critic networks, having weights $\theta^{\mu'}$ and $\theta^{Q'}$ respectively. Then, the critic loss can be computed w.r.t. the output $Q(s_i, a_i \| \theta^{Q})$ of the critic network for the i'th sample. 
 
-See <a href="#References">[4]</a> for more details on the use of target networks.
+See <a href="#References">[3]</a> for more details on the use of target networks.
 
-Now, as mentioned above, the weights of the critic network can be updated with the gradients obtained from the loss function in Eq. 2. Also, remember that the actor network is updated with the Deterministic Policy Gradient. Here lies the crux of DDPG! Silver, et al., <a href="#References">[3]</a> proved that the stochastic _policy gradient_ $\nabla_{\theta} \mu (a \| s, \theta)$, which is the gradient of the policy's performance, is equivalent to the deterministic policy gradient, which is given by: 
+Now, as mentioned above, the weights of the critic network can be updated with the gradients obtained from the loss function in Eq. 2. Also, remember that the actor network is updated with the Deterministic Policy Gradient. Here lies the crux of DDPG! Silver, et al., <a href="#References">[2]</a> proved that the stochastic _policy gradient_ $\nabla_{\theta} \mu (a \| s, \theta)$, which is the gradient of the policy's performance, is equivalent to the deterministic policy gradient, which is given by: 
 
 $$
 \begin{equation}
@@ -114,7 +114,7 @@ I think the proof of the deterministic policy gradient theorem is quite illumina
 
 <div class="theorem">
 (Deterministic Policy Gradient Theorem). 
-Suppose the Markov Decision Process satisfies the appropriate conditions (see <a href="#References">[3]</a>). These imply that $\nabla_{\theta^{\mu}} \mu(s|\theta^{\mu})$ and $\nabla_{a} Q(s, a|\theta^{Q})$ exist and that the deterministic policy gradient exists. Then, 
+Suppose the Markov Decision Process satisfies the appropriate conditions (see <a href="#References">[2]</a>). These imply that $\nabla_{\theta^{\mu}} \mu(s|\theta^{\mu})$ and $\nabla_{a} Q(s, a|\theta^{Q})$ exist and that the deterministic policy gradient exists. Then, 
 
 $$
 \nabla_{\theta^{\mu}} \mu \approx\int_{S} \rho^{\mu'}(s_t) \nabla_{a} Q(s, a|\theta^{Q})|_{s=s_t, a=\mu(s_t)} \nabla_{\theta^{\mu}} \mu(s|\theta^{\mu})|_{s=s_t}  ds
@@ -271,7 +271,7 @@ class CriticNetwork(object):
 
 {% endhighlight %}
 
-I would suggest placing these two functions in separate Actor and Critic classes, as shown above. The hyperparameter and layer details for the networks are in the appendix of the DDPG paper <a href="#References">[5]</a>. The networks for the low-dimensional state-space problems are pretty simple, though. For the actor network, the output is a tanh layer scaled to be between $[-b, +b], b \in \mathbb{R}$. This is useful when your action space is on the real line but is bounded and closed, as is the case for the pendulum task. 
+I would suggest placing these two functions in separate Actor and Critic classes, as shown above. The hyperparameter and layer details for the networks are in the appendix of the DDPG paper <a href="#References">[4]</a>. The networks for the low-dimensional state-space problems are pretty simple, though. For the actor network, the output is a tanh layer scaled to be between $[-b, +b], b \in \mathbb{R}$. This is useful when your action space is on the real line but is bounded and closed, as is the case for the pendulum task. 
 
 Notice that the critic network takes both the state and the action as inputs; however, the action input skips the first layer. This is a design decision that has experimentally worked well. Accommodating this with tflearn was a bit tricky.
 
@@ -306,8 +306,12 @@ For the actor network...
 # This gradient will be provided by the critic network
 self.action_gradient = tf.placeholder(tf.float32, [None, self.a_dim])
 
-# Combine the gradients here 
-self.actor_gradients = tf.gradients(self.scaled_out, self.network_params, -self.action_gradient)
+# Combine the gradients, dividing by the batch size to 
+# account for the fact that the gradients are summed over the 
+# batch by tf.gradients 
+self.unnormalized_actor_gradients = tf.gradients(
+    self.scaled_out, self.network_params, -self.action_gradient)
+self.actor_gradients = list(map(lambda x: tf.div(x, self.batch_size), self.unnormalized_actor_gradients))
 
 # Optimization Op
 self.optimize = tf.train.AdamOptimizer(self.learning_rate).\
@@ -487,10 +491,8 @@ The authors of DDPG also used convolutional neural networks to tackle control ta
 
 ## References 
 
-1. Sutton, Richard S., and Andrew G. Barto. [Reinforcement learning: An introduction](http://incompleteideas.net/sutton/book/ebook/the-book.html).
-2. [Reinforcement learning: An introduction - Fig 6.15](http://incompleteideas.net/sutton/book/ebook/node66.html)
-3. Silver, et al. [Deterministic Policy Gradients](http://jmlr.org/proceedings/papers/v32/silver14.pdf)
-4. Mnih, et al. [Human-level control through deep reinforcement learning](http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html)
-5. Lillicrap, et al. [Continuous control with Deep Reinforcement Learning](http://arxiv.org/pdf/1509.02971v2.pdf)
-6. [Reinforcement learning: An introduction - Fig 6.13](http://incompleteideas.net/sutton/book/ebook/node65.html)
+1. Sutton, Richard S., and Andrew G. Barto. [Reinforcement learning: An introduction](http://www.incompleteideas.net/book/the-book.html).
+2. Silver, et al. [Deterministic Policy Gradients](http://jmlr.org/proceedings/papers/v32/silver14.pdf)
+3. Mnih, et al. [Human-level control through deep reinforcement learning](http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html)
+4. Lillicrap, et al. [Continuous control with Deep Reinforcement Learning](http://arxiv.org/pdf/1509.02971v2.pdf)
 
