Some re-organizing, paper summary boilerplate gen

--- a/paper-summaries/computer-vision/_posts/2017-05-14-DESIRE.markdown
+++ b/paper-summaries/computer-vision/_posts/2017-05-14-DESIRE.markdown
@@ -5,6 +5,7 @@ date: 2017-05-14
 paper_ref: Lee, et. al., 2016
 redirect_from:
     - /paper-summaries/2017/05/14/DESIRE.html
+    - /paper-summaries/deep-learning/2017/05/14/DESIRE.html
 ---
 
 <script type="text/x-mathjax-config">
