--- a/paper-summaries/natural-language-processing/_posts/2018-06-22-z-forcing.markdown
+++ b/paper-summaries/natural-language-processing/_posts/2018-06-22-z-forcing.markdown
@@ -33,15 +33,14 @@ If I'm not mistaken, learning the parameters of these parametric models with a t
 
 ### Z-forcing 
 
-Strong autoregressive decoders overpower the latent variables $z$, preventing the CPD from learning complex multi-modal distributions. To mitigate this, they introduce an auxiliary cost to the training objective. An extra parametric model is introduced, $p_{\eta}(b | z)$, that "forces" the latents to be predictive of the hidden states $b$ of the "backward network" (the inference network).
+Strong autoregressive decoders overpower the latent variables $z$, preventing the CPD from learning complex multi-modal distributions. To mitigate this, they introduce an auxiliary cost to the training objective. An extra parametric model is introduced, $p_{\eta}(b \| z)$, that "forces" the latents to be predictive of the hidden states $b$ of the "backward network" (the inference network).
 
 ## Experiments
 
 They validate the approach on speech modeling (TIMIT, Blizzard) and language modeling. The metric is average LL. On Seqeuential MNIST, z-forcing is competitive with "deeper" recurrent generative models like PixelRNN. 
-
 {%
     include image.html
-    img="img/z-forcing-interp.png"
+    img="/img/z-forcing-interp.png"
     caption="Some fun language modeling results interpolating the latent space"
 %}
 
