--- a/paper-summaries/general-ML/_posts/2017-08-31-ISOMAP.markdown
+++ b/paper-summaries/general-ML/_posts/2017-08-31-ISOMAP.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "A Global Geometric Framework for Nonlinear Dimensionality Reduction"
 date: 2017-08-31
-paper_ref: Tenenbaum, et. al. 2000
+paper_ref: Tenenbaum, et al. 2000
 ---
 
 <script type="text/x-mathjax-config">
