--- a/paper-summaries/generative-adversarial-networks/_posts/2017-02-01-infoGAN.markdown
+++ b/paper-summaries/generative-adversarial-networks/_posts/2017-02-01-infoGAN.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "InfoGAN: Interpretable Representation Learning by Information Maximizing Generative Adversarial Nets"
 date: 2017-02-01
-paper_ref: Chen, et. al., 2016
+paper_ref: Chen, et al., 2016
 redirect_from:
     - /paper-summaries/2017/02/01/infoGAN.html
 ---
