Minor addition to trigger rebuild?

--- a/_posts/blog/2018-12-26-top-5-papers-of-2018.md
+++ b/_posts/blog/2018-12-26-top-5-papers-of-2018.md
@@ -49,6 +49,8 @@ Imitation learning really took off in 2018, so look for GAIL-type algorithms as 
 
 I wrote a detailed paper summary on these two papers earlier this year, so [check that out](https://pemami4911.github.io/paper-summaries/deep-rl/2018/09/13/addressing-challenges-in-deep-rl.html) if you're interested in learning a bit more.
 
+(Sorry, I kind of cheated and put 2 papers under 1!)
+
 ### 3. Neural Best Buddies: Sparse Cross-Domain Correspondence 
 By Aberman et al., published in SIGGRAPH 2018 [[pre-print]](https://arxiv.org/abs/1805.04140)
 
