spelling and grammar

--- a/_posts/blog/2019-08-15-mlss-2019.md
+++ b/_posts/blog/2019-08-15-mlss-2019.md
@@ -3,7 +3,7 @@ layout: post
 title: "MLSS 2019"
 date: 2019-08-15
 category: blog
-byline: "Reflections and Technical Highlights from the 2019 London MLSS"
+byline: "Reflections and technical highlights from the 2019 London MLSS"
 ---
 
 <script type="text/javascript" async
@@ -186,7 +186,7 @@ Variational inference, which replaces integration with an optimization problem a
 
 ### Markov chains
 
-Monte carlo methods use samples from the exact target typical set. Markov chains are great because a Markov transition that targets a particular distribution will naturally concentrate towards its probability mass. In practice for MCMC, Michael showed us that the chain quickly converges onto the typical set. The main challenge of MCMC methods seem to be handling various failure modes that cause divergence or cases where the chain gets stuck somwhere within the typical set. 
+Monte carlo methods use samples from the exact target typical set. Markov chains are great because a Markov transition that targets a particular distribution will naturally concentrate towards its probability mass. In practice for MCMC, Michael showed us that the chain quickly converges onto the typical set. The main challenge of MCMC methods seem to be handling various failure modes that cause divergence or cases where the chain gets stuck somewhere within the typical set. 
 
 ### Diagnosing your MCMC
 
@@ -226,7 +226,7 @@ We learned about her PhD project where they took Google street view images and r
 
 When the data is biased (and data collected out in the real world reflects the current state of the society from which it was extracted from), model predictions will be biased. Some examples we saw: using ML to predict who to hire, placing current ML techniques in the hands of ICE, predictive policing, gender classification, and facial recognition.
 
-Science is inherently political. We all have a responbility to be cognizant of the [dual-use nature](https://openai.com/blog/preparing-for-malicious-uses-of-ai/) of the techologies we create. Even people working on "theory" must adhere to this. The people working on the foundations of our modern statistics ([like Fisher](https://en.wikipedia.org/wiki/Ronald_Fisher#Eugenics)) were eugenicists! 
+Science is inherently political. We all have a responsibility to be cognizant of the [dual-use nature](https://openai.com/blog/preparing-for-malicious-uses-of-ai/) of the technologies we create. Even people working on "theory" must adhere to this. The people working on the foundations of our modern statistics ([like Fisher](https://en.wikipedia.org/wiki/Ronald_Fisher#Eugenics)) were eugenicists! 
 
 ### Additional Resources
 
