removed broken brackets

--- a/_posts/blog/2019-08-15-mlss-2019.md
+++ b/_posts/blog/2019-08-15-mlss-2019.md
@@ -279,7 +279,7 @@ This works because $F$ is submodular - the marginal improvement of adding a sing
 
 ### Continuous relaxation for minimization
 
-What if we want to minimize a submodular function? We can consider a continuous relaxations of $F$ to a convex function. The Lovasz extension provides a method for relaxing a function defined on the Boolean hypercube, $\{ 0,1 \}^N$, to $[0,1]^N$. The result is a piece-wise, linear convex function $f(z)$ that can be optimized using subgradient methods, and a final result can be obtained by rounding.
+What if we want to minimize a submodular function? We can consider a continuous relaxations of $F$ to a convex function. The Lovasz extension provides a method for relaxing a function defined on the Boolean hypercube to $[0,1]^N$. The result is a piece-wise, linear convex function $f(z)$ that can be optimized using subgradient methods, and a final result can be obtained by rounding.
 
 ### Additional Resources
 
