small clarification to MCMC section

--- a/_posts/blog/2019-08-15-mlss-2019.md
+++ b/_posts/blog/2019-08-15-mlss-2019.md
@@ -200,7 +200,7 @@ HMC is an alternative to Metropolis-Hastings MCMC. One issue with MH is that a n
 
 We want to efficiently explore the typical set without leaving it. Insight: align a vector field to the typical set and then integrate along the field. HMC is the formal procedure for adding just enough *momentum* to the gradient vector field to align the gradient field with the typical set. The analogy Michael used is that we need to add the momentum needed for a satellite to enter orbit around the earth.
 
-How to do this? Use Hamiltonian measure-preserving flow, which is a scalar function $H(p,q)$ of the parameters $q$ and momentum $p$ such that $H(p,q) = e^{-H(p,q)}d^np d^nq$. According to Michael (this is a magic, hand-wavy thing) it is the only way of producing the vector field we want to integrate along that actually works. 
+How to do this? Use Hamiltonian measure-preserving flow, which is a scalar function $H(p,q)$ of the parameters $q$ and momentum $p$ such that $H(p,q) = -log (\pi(p|q)) -\log (\pi(q))$. Here, $\pi(q)$ is the target density, which is specified by the problem. $\pi(p|q)$ is a conditional density for the momentum, which we choose. According to Michael, this is the only way of producing the gradient vector field we want to integrate along that actually works (this is a magic, hand-wavy thing).
 
 The Markov transitions now consist of randomly sampling a *Hamiltonian trajectory*. Motion is governed by the above Hamiltonian, which has a kinetic and potential energy term. From the current location on the typical set, we randomly sample the momentum and the trajectory length, and then use an ODE numerical integrator to compute where we end up. I picture this like a marble being released with some initial momentum inside a bowl-shaped surface; wherever the marble finally rests after rolling around for a while is analogous to the next sample from the posterior we draw and is the next state of the chain.
 
